src/taskpane/taskpane.css
/* 
 * Copyright (c) Microsoft Corporation. All rights reserved. Licensed under the MIT license.
 * See LICENSE in the project root for license information.
 */

/*Variables*/
:root {
    --button-default: #f4f4f4;
}

/*UTILITY CLASSES*/
* {
    box-sizing: border-box;
}

.flex {
    display: flex;
}

.hidden {
    display: none ! important;
}

.open {
    right: 0px !important;
}

.clearfix {
    overflow: auto;
}

.pb-md {
    padding-bottom: 1.5rem;
}

.pb-lg {
    padding-bottom: 3rem;
}

.pt-md {
    padding-top: 1.5rem;
}

.pt-lg {
    padding-top: 3rem;
}

.mb-0 {
    margin-bottom: 0;
}

.mb-sm {
    margin-bottom: .75rem;
}

.mb-md {
    margin-bottom: 1.5rem;
}

.mb-lg {
    margin-bottom: 3rem;
}

.mt-0 {
    margin-top: 0;
}

.mt-sm {
    margin-top: .75rem;
}

.mt-md {
    margin-top: 1.5rem;
}

.mt-lg {
    margin-top: 3rem;
}

.ma-0 {
    margin: 0;
}

.mr-sm {
    margin-right: 0.75rem;
}

.ml-sm {
    margin-left: 0.75rem;
}

html,
body {
    font-family: Arial;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

ul.form {
    margin: 0;
    padding: 0;
}

.fade {
    transition: 0.3s;
}

/*PAGE PARTS*/

.header {
    position: fixed;
    width: 100%;
    background-color: white;
    height: 50px;
    top: 0;
    left: 0;
    align-items: center;
    display: flex;
    padding: 10px 5px;
    z-index: 1;
}

.header-heading {
    margin: 0 0 0 1rem;
}

.header-logo {
    height: 40px;
    width: 40px;
}

.panel {
    background-color: white;
    height: calc(100vh - 100px);
    /* 150 leaves space around header and footer */
    left: 0;
    top: 50px;
    overflow-y: auto;
    padding: 1rem;
    position: absolute;
    transition: left 0.2s;
    visibility: visible;
    width: 100vw;
}

.panel.offscreen {
    left: 100%;
    visibility: hidden;
}

.footer {
    width: 100vw;
    height: 35px;
    bottom: 0;
    padding: .25rem 1rem;
    position: fixed;
    background-color: white;
}

.footer-logo {
    height: 25px;
}

.well {
    background-color: #f1f1f1;
    padding: .5rem;
    border-radius: .5rem;
    border: 1px solid #ddd;
    margin: 0;
}

.pop-up {
    background-color: #f1f1f1;
    position: fixed;
    align-self: center;
    z-index: 1;
    padding: .75rem;
    color: black;
    border: 1px solid #eeeeee;
    border-radius: 0.5rem;
    width: calc(100% - 1.5rem);
    margin: 0 0.75rem;
    /*match homepage */
    box-shadow: 3px 5px 5px rgba(0, 0, 0, 0.05);
}

.pop-up .close {
    /* margin-top: -0.5rem; */
    padding: 0 0 0.25rem;
    font-size: 1.5rem;
    color: black;
    line-height: 0.85rem;
    float: right;
    border: none;
    background: none;
    cursor: pointer;
}

.pop-up .r {
    float: right;
    text-align: left;
}

.pop-up .l {
    float: left;
    text-align: left;
}

.pop-up .ok.ms-Button {
    min-width: 0;
    border: solid 1px rgba(0, 0, 0, 0.067);
}

.pop-up .ok.ms-Button.r {
    margin-right: -0.5rem;
}

.pop-up .ok.ms-Button.l {
    margin-left: 0;
}

.pop-up.err {
    background-color: #feeeee;
    border-color: #fddddd;
}

.pop-up.sending {
    background-color: #fefeee;
    border-color: #e7e7cc;
}

.pop-up.sent {
    background-color: #f7fff7;
    border-color: #cceecc;
}

.error-message {
    color: red;
    font-weight: 700;
}

.style-prompt {
    margin-top: 0;
    position: static;
}

.style-buttons {
    margin-top: 0.5em;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.style-button {
    margin-right: 0.5em;
    margin-bottom: 0.5em;
}

#main-page-buttons {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#main-page-buttons div {
    margin-top: 10px;
}

.selectors {
    width: 100%;
}

/*FORMS AND SPECIFIC ELEMENTS*/

.form {
    margin: 0;
    padding: 0;
}

.form-pair {
    list-style-type: none;
    margin-bottom: 0;
}

.form-label,
.form-input {
    display: block;
}

.form-label {
    font-size: .9em;
}

.form-input {
    width: 100%;
}

#main-screen {
    height: calc(100vh - 100px);
    width: 100%;
    justify-content: start;
    flex-direction: column;
    text-align: left;
    margin: 50px 0;
    padding: 1rem;
}

#progress-bar {
    width: 100%;
    background-color: #eeeeee;
    border-radius: 0.25rem;
    overflow: hidden;
}

#progress-bar-progress {
    width: 1%;
    height: 15px;
    background-color: rgb(96, 236, 96);
    transition: 0.5s;
}

#bottom-buttons,
#artifact-select {
    width: 100%;
    align-self: center;
    align-items: start;
    text-align: start;
    justify-content: start;
    flex-direction: row;
    position: relative;
}

#bottom-buttons {
    padding-bottom: 50px;
}

#help-buttons {
    width: 100%;
    align-self: center;
    align-items: start;
    text-align: start;
    justify-content: start;
    flex-direction: row;
    position: relative;
    display: inline-block;
}

.styles-block {
    /*display:flex is assigned when the block is shown, display:none when hidden*/
    align-self: left;
    align-items: start;
    text-align: start;
    justify-content: start;
    flex-direction: column;
    position: relative;
    top: 0.5em;
}

.styles-block select {
    width: 100%;
    align-self: center;
}

.style-labels {
    margin-top: 0.5em;
}

#login-prompt {
    margin-top: 8%;
    margin-bottom: 0%;
}

#login-buttons {
    margin-top: 8%;
}

#artifact-select {
    width: 100%;
    margin-bottom: 0.75rem;
}

#send-to-spira {
    display: inline-block;
    margin-left: 2.5%;
    margin-top: 5%;
    margin-bottom: 3%;
}

#help-screen {
    height: calc(100vh - 100px);
    width: 100%;
    justify-content: start;
    flex-direction: column;
    text-align: left;
    margin-top: 50px;
    padding: 1rem;
    overflow-y: auto;
    position: absolute;
}

.tooltip {
    position: relative;
    background: #eaeaea;
    border-radius: 100%;
    padding: 0px 5px;
    cursor: help;
}

.tooltip::before,
.tooltip::after {
    position: absolute;
    left: 50%;
    opacity: 0;
}

.tooltip::before {
    content: "";
    border-width: 0.5rem 0.4rem 0 0.4rem;
    border-style: solid;
    border-color: #dedede transparent transparent transparent;
    margin-top: -0.1rem;
    margin-left: -0.42rem;
    top: -0.5rem;
}

.tooltip::after {
    font-size: 10pt;
    border-style: solid;
    border-width: 1px;
    border-color: #dedede;
    background-color: white;
    padding: 10px;
    width: 150px;
    margin-left: -75px;
    bottom: 1.7rem;
}

.tooltip:hover::before,
.tooltip:hover::after {
    opacity: 1;
}

.tooltip:hover::after {
    /* Must be separated so it only appears on hovering the small part */
    content: attr(tooltip);
}

.artifact-button {
    box-sizing: border-box;
    font-family: Segoe UI WestEuropean, Segoe UI, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
    -webkit-font-smoothing: antialiased;
    color: #333;
    font-size: 14px;
    font-weight: 600;
    background-color: var(--button-default);
    border: 1px solid var(--button-default);
    cursor: pointer;
    display: inline-block;
    height: 32px;
    min-width: 80px;
    padding: 4px 20px 6px;
}

.artifact-button:disabled {
    background-color: var(--button-default);
    color: #a6a6a6;
}

.artifact-button:disabled.activated {
    background-color: #abd3f3;
}

.artifact-button:hover {
    background-color: #eaeaea;
    color: black;
}

.ms-Button--default.activated,
.artifact-button.activated,
.artifact-button:focus {
    background-color: #0078d7;
    cursor: default;
    color: white !important;
}

.ms-Button--primary {
    color: white;
    font-weight: 600;
}

.ms-Button:active {
    color: white;
}

.bold {
    font-weight: bold;
}

/*MS DEFAULT CLASSES*/
.ms-welcome__header {
    padding: 20px;
    padding-bottom: 30px;
    padding-top: 100px;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: column;
    flex-direction: column;
    align-items: center;
}

.ms-welcome__main {
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: column;
    flex-direction: column;
    align-self: left;
}

.ms-welcome__main>h2 {
    width: 100%;
    text-align: center;
}

.ms-welcome__features {
    list-style-type: none;
    margin-top: 20px;
}

.ms-welcome__features.ms-List .ms-ListItem {
    padding-bottom: 20px;
    display: -webkit-flex;
    display: flex;
}

.ms-welcome__features.ms-List .ms-ListItem>.ms-Icon {
    margin-right: 10px;
}

.ms-welcome__action.ms-Button--hero {
    margin-top: 30px;
}

.ms-Button.ms-Button--hero .ms-Button-label {
    color: #0078d7;
}

.ms-Button.ms-Button--hero:hover .ms-Button-label,
.ms-Button.ms-Button--hero:focus .ms-Button-label {
    color: #0A0269;
    cursor: pointer;
}

b {
    font-weight: bold;
}

